--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">News</string>
     <string name="vdots">⋮</string>
     <string name="Item">item</string>
-    <string name="search_hint">搜索新闻</string>
+    <string name="search_hint">搜索</string>
+
     <string name="search_title">search</string>
     <string name="action_settings">settings</string>
     <string name="share">Share...</string>
@@ -23,9 +24,8 @@
     <string name="title_news">新闻</string>
     <string name="title_trend">聚类</string>
     <string name="title_data">数据</string>
-
     <string name="home_second">Home Second</string>
-    <string name="title_graph">相关信息</string>
+    <string name="title_graph">图谱</string>
     <string name="title_settings">设置</string>
     <string name="region">地区</string>
     <string name="active">现有确诊</string>
