--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="share">分享…</string>
     <string name="details">新闻详情</string>
     <string name="news">新闻列表</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="tab_text_1">news</string>
+    <string name="tab_text_2">paper</string>
+    <string name="tab_text_3">paper</string>
     <string name="title_news">新闻</string>
     <string name="title_trend">聚类</string>
     <string name="title_data">数据</string>
